--- a/MINI-PROJ-1/student/templates/your_code.html
+++ b/MINI-PROJ-1/student/templates/your_code.html
@@ -1,5 +1,68 @@
-<!-- Recall that you can make get the boiler plate code by typing ! and then hitting enter -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Julian Tuazon</title>
+    <link rel="stylesheet" href="../static/css/styling.css">
+</head>
+<body>
+    <div class="visible" id="intro">
+        <h1 id="name">Julian Tuazon</h1>
+        <div id="big-box">
+            <div class="container-visible intro-container container">
+                <h2 class="header">About Me</h2>
+                <ul>
+                    <li>1st Year Intended CS</li>
+                    <li>Oxnard, California</li>
+                    <li>Top 1% osu! player</li>
+                    <li>I don't sleep x-x</li>
+                </ul>
+            </div>
+    
+            <div class="container-visible intro-container container">
+                <h2 class="header">Contact</h2>
+                <ul>
+                    <li>Discord: BallsAngus#6969</li>
+                    <li>Berkeley Email: j.tuazon@berkeley.edu</li>
+                    <li>PiE Email: juliamigueltuazon@pioneers.berkeley.edu</li>
+                    <li><a href="https://github.com/BallsAngus/">Github</a></li>
+                    <li><a href="https://twitter.com/BallsAngus">Twitter (I don't use this)</a></li>
+                </ul>
+            </div>
+    
+            <div class="container-visible intro-container container">
+                <h2 class="header">Interests</h2>
+                <ul>
+                    <li>PC Building</li>
+                    <li>Mechanical Keebs</li>
+                    <li>Jpop</li>
+                    <li>Stonks</li>
+                    <li>I LiKe ViDeO GaMeS, AnImE, aNd MaNgA</li>
+                </ul>
+            </div>
 
-<!-- Your code here -->
+            <div class="container-hidden project-container test">
+                <h2 class="header">SpaceNav</h2>
+            </div>
+
+            <div class="container-hidden project-container test">
+                <h2 class="header">Otherwordly</h2>
+            </div>
+        </div>
+
+        <div id="stuff">
+            <button id="projects">Cool Stuff?</button>
+        </div>
+        
+        <div>
+            <button>Cursed Mode</button>
+        </div>
+    </div>
+    <script src="../static/js/functions.js"></script>
+
+</body>
+</html>
 
 
