Fixed button. Added images.

--- a/MINI-PROJ-1/student/static/css/styling.css
+++ b/MINI-PROJ-1/student/static/css/styling.css
@@ -130,5 +130,5 @@ button:hover {
 #big-box {
     display: flex;
     justify-content: space-evenly;
-    flex-direction: row;
+    flex-direction: column;
 }
