--- a/MINI-PROJ-1/student/templates/your_code.html
+++ b/MINI-PROJ-1/student/templates/your_code.html
@@ -44,11 +44,31 @@
             </div>
 
             <div class="container-hidden project-container test">
-                <h2 class="header">SpaceNav</h2>
+                <h2 class="header">Poorly Named Space Game</h2>
+                <img 
+                src="https://github.com/BallsAngus/SpaceNav/raw/main/Updated%20SpaceNav/Assets/Previews/Preview%202.PNG" 
+                alt="showcase 1" width="400px">
             </div>
 
             <div class="container-hidden project-container test">
-                <h2 class="header">Otherwordly</h2>
+                <h2 class="header"><img src="../img/otherwordly_logo.png" alt="logo" width="230px"></h2>
+                <img 
+                src="https://github.com/BallsAngus/CongressionalTypeGame/raw/master/Assets/Previews/Preview%202.PNG" 
+                alt="showcase 2" width="400px">
+            </div>
+
+            <div class="container-hidden project-container test">
+                <h2 class="header">Guiturd Hero</h2>
+                <img 
+                src="../img/rhythm.png" 
+                alt="bad game showcase" width="400px">
+            </div>
+
+            <div class="container-hidden project-container test">
+                <h2 class="header"><img src="../img/minecraft_otherworld.png" alt="logo" width="230px"></h2>
+                <img 
+                src="../img/pretty.gif" 
+                alt="showcase 2" width="400px">
             </div>
         </div>
 
