--- a/shepherd/templates/game.html
+++ b/shepherd/templates/game.html
@@ -134,7 +134,22 @@
         type, and style attributes, and similar id and onclick attributes.
        -->
       
-      <!--TODO: add button here-->
+       <button
+       id="card3Button"
+       type="button"
+       class="btn btn-primary"
+       onclick="pressedCard(2)"
+       style="
+         display: none;
+         float: left;
+         z-index: 1000;
+         position: relative;
+         margin-left: 10px;
+       "
+     ></button>
+
+
+      </button>
 
       <!-- END QUESTION 4 -->
 
